# monte-carlo-integration

./: .gitignore  BUILD  CMakeLists.txt  WORKSPACE  makefile
extension_module_spike/: setup.py
extension_module_spike/demolib/: demolib.h  demomodule.c
extension_module_spike/src/: module.cpp
include/: monte_carlo_integration.h  numeric_types.h
include/mci/: monte_carlo_integration.h  random_utils.h
python/: .gitignore  BUILD  setup.py  setup_env.bat  setup_env.sh
python/cpp_api/: boost_wrapper.h  mci_cpp_module.cpp  monte_carlo_integration_py.h
python/mci/: __init__.py  cpp_api_externals.pxd  cpp_core_externals.pxd  cpp_std_externals.pxd  monte_carlo_integration.cpp  monte_carlo_integration.html  monte_carlo_integration.pyx  test_mci.py
src/: main.cpp  monte_carlo_integration.cpp  utils.cpp  utils.h
src/domain_transformers/: domain_transformer.cpp  domain_transformer.h  domain_transformer_utils.cpp  domain_transformer_utils.h  finite_interval_to_unif_domain_transformer.cpp  finite_interval_to_unif_domain_transformer.h  lower_closed_to_unif_domain_transformer.cpp  lower_closed_to_unif_domain_transformer.h  open_real_to_uniform_domain_transformer.cpp  open_real_to_uniform_domain_transformer.h  upper_closed_to_unif_domain_transformer.cpp  upper_closed_to_unif_domain_transformer.h
src/mci/: main.cpp  monte_carlo_integration.cpp  random_engine_factory.cpp  random_engine_factory.h  random_utils.cpp  utils.cpp  utils.h
src/mci/domain_transformers/: domain_transformer.cpp  domain_transformer.h  (+10 more)
tools/: build_cpp.bat  build_python.bat
